# OneDragon-Alpha

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/github-pr-review/: README.md  SKILL.md  list-unresolved.sh  reply-comment.sh  resolve-thread.sh
docs/: README.md  development-environment.md  development-guide.md  project-overview.md
docs/architecture/: alpha-architecture.md
docs/database/: security-requirements.md
docs/develop/: README.md
docs/develop/backend/: chat.md  mysql_connection_service.md
docs/develop/frontend/: chat.md
docs/develop/modules/: model-config-api.md  model-config-database.md  model-config-user-guide.md  model-config.md  qwen-model.md
docs/develop/spec/: agent_guidelines.md
docs/features/backend/: mysql_connection_service.md
docs/features/frontend/: chat.md
docs/modules/model-config/: model-config.md  qwen-model.md
examples/: qwen_complete.py  qwen_model_example.py  test_api.py  test_qwen.py  test_token_sync.py
frontend/: .env.development  .env.production  .gitignore  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
frontend/e2e/: chat-model-selector.spec.ts  model-management.spec.ts  smoke.spec.ts
frontend/e2e/utils/: test-helper.ts
frontend/mock/: index.ts
frontend/mock/chat/: analyse.ts  stream.ts
frontend/src/: App.vue  env.d.ts
frontend/tests/: README.md
openspec/: config.yaml
src/one_dragon_agent/: __init__.py
src/tushare_mcp_server/: main.py  str_utils.py
(+178 files in other folders)
