[project]
name = "onedragon-alpha"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agentscope>=1.0.14",
    "aiomysql>=0.3.2",
    "akshare>=1.17.49",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "sqlalchemy>=2.0.46",
    "tushare>=1.4.24",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.6",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.3.1",
    "ruff>=0.13.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (requires real database)",
]
testpaths = ["tests"]
pythonpath = "src"
